--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.servlet.contextPath=/bank-system
 server.port=8080
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/sweater?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=12345678
