--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.servlet.contextPath=/bank-system
 server.port=8080
+logging.level.org.springframework.web=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bank-system?autoReconnect=true&useSSL=false
 spring.datasource.username=root
