--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 # Уровень логирования
-log4j.rootLogger=INFO, file
-
+log4j.rootLogger=INFO, console, file
+# Апендер для работы с консолью
+log4j.appender.console=org.apache.log4j.ConsoleAppender
 # Апендер для работы с файлами
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # Путь где будет создаваться лог файл
@@ -10,3 +11,6 @@ log4j.appender.file.MaxFileSize=1MB
 # Конфигурируем шаблон вывода логов в файл
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# Конфигурируем шаблон вывода логов в консоль
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
