Add error message to 400.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.contextPath=/bank-system
+server.error.include-stacktrace=always
 server.port=9090
 logging.level.org.springframework.web=DEBUG
 spring.jpa.hibernate.ddl-auto=update
