--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,28 @@
-server.servlet.contextPath=/bank-system
-server.error.include-stacktrace=always
-server.port=9090
-logging.level.org.springframework.web=DEBUG
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bank-system?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=12345678
+# Application
+spring.application.name = bank-system
+
+# Server
+server.address=127.0.0.1
+server.servlet.contextPath = /bank-system
+server.port = 9090
+
+# Logging
+server.error.include-stacktrace = always
+logging.level.org.springframework.web = DEBUG
+
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/bank-system?autoReconnect=true&createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = 12345678
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type = TRACE
