--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.springframework.web = DEBUG
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bank-system?autoReconnect=true&createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/bank-system?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = 12345678
 
@@ -26,3 +26,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
+
+spring.jackson.serialization.fail-on-empty-beans=false
