--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,15 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.odinrossy</groupId>
     <artifactId>bank-system</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bank-system</name>
     <description>Course project</description>
+
+    <!--https://odinrossy.github.io/bank-system/-->
 
     <properties>
         <java.version>1.8</java.version>
